<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Equipe">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:paddingTop="10dp"
                android:text="@string/strEquipeTitulo"
                android:textAlignment="center"
                android:textColor="@color/rosaApp"
                android:textSize="25sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/logoestudonauta" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/strEquipeDescricao"
                android:textColor="@color/rosaApp"
                android:textSize="17sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/strEquipeCaynan"
                android:textColor="@color/rosaApp"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strEquipeCaynan"
                app:srcCompat="@drawable/fotocaynan" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/strEquipeGustavo"
                android:textColor="@color/rosaApp"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strEquipeGustavo"
                app:srcCompat="@drawable/fotoguanabara" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/strEquipeItalo"
                android:textColor="@color/rosaApp"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strEquipeItalo"
                app:srcCompat="@drawable/fotoitalo" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/strEquipeMichael"
                android:textColor="@color/rosaApp"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strEquipeMichael"
                app:srcCompat="@drawable/fotomichel" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/strEquipePriscila"
                android:textColor="@color/rosaApp"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strEquipePriscila"
                app:srcCompat="@drawable/fotopriscila" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/strEquipeRamon"
                android:textColor="@color/rosaApp"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strEquipeRamon"
                app:srcCompat="@drawable/fotoramon" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/strEquipeVera"
                android:textColor="@color/rosaApp"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strEquipeVera"
                app:srcCompat="@drawable/fotovera" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/strEquipeYgor"
                android:textColor="@color/rosaApp"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strEquipeYgor"
                app:srcCompat="@drawable/fotoygor" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnEquipeVoltar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-8dp"
        android:onClick="clickVoltar"
        android:text="@string/strVoltar"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>